--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
                     <section class="news-updates">
                          <div>
                               <h2 class="section-title">Website Updates</h2>
+                              <p> 
+                                   <strong>1/28/2023: </strong> Working on finishing off the Hematoogy Pages which is 
+                                   the last Science topic to finish off. I plan to do more later after I do the rest of 
+                                   the topics.
+                              </p>
                               <p>
                                    <strong>1/27/2023: </strong> Working on building a new front page with more current updates and news so that it has current events
                                    so people will check back often to see what is new. 
