--- a/learning/anemia.html
+++ b/learning/anemia.html
@@ -89,9 +89,63 @@
                     <section>
                          <h2 class="science-headers" id="anemia">Anemia</h2>
                          <p> 
-                              
+                              For Anemia, the blood test will reveal low Hematocrit, low Hemoglobin and most likely low Red Blood cell 
+                              counts. There is one anemia in Beta Thalassemia where you can have higher levels of RBCs in the 
+                              6 million range, but all others will show low levels of RBCs. The types of anemia are broken 
+                              down into 3 categories with microcytic, normocytic and macrocytic based on the MCV levels.
                          </p>
-                         
+                         <p>
+                              The Microcytic anemias consist of the type of anemia where the red blood cells can't form enough healthy 
+                              cells. We know as the Red Blood Cell matures, it gets smaller and smaller. The microcytic anemias have 
+                              small red cells with a MCV below 80 fl. This is because they wait and wait for all the proper materials 
+                              like Iron, protoporphyrin or globin proteins. When they can't get enough, they end up just making smaller 
+                              Red Blood Cells. This includes Iron Deficiency Anemia, Thalassemia and Sideroblastic Anemia. I have talked 
+                              about Iron deficiency and Thalassemia before as they are key microcytic anemias. Sideroblastic anemia has 
+                              a genetic form, but most of the acquired sideroblastic anemia comes from toxins like Lead poisoning.  In 
+                              Sideroblastic anemia, the iron clumps up to make small visible clumps which makes them look like basophils. 
+                              These can often be seen in the bone marrow or a blood smear. We call this Basophilic Stippling.
+                         </p>
+                         <p>
+                              Thalassemia comes in 2 forms with Alpha and Beta Thalassemia. This is a genetic disease where there is a 
+                              loss of one or more of the genes that makes the globin proteins for the hemoglobin. In Alpha Thalassemia, 
+                              the red blood cells make little or no Alpha globin proteins. In Beta Thalassemia, the red blood cells will 
+                              make little to no beta globin proteins. Depending on how severe these Thalassemia is, they will make very 
+                              little to no globins which are necessary to for the 2 alpha globin and 2 beta globin structure of the 
+                              Hemoglobin. What ends up happening is you get hemoglobin made with 4 alpha proteins or 4 beta proteins. 
+                              They work, but those RBCs tend to die very quickly when they reach circulation. Then you have hemolysis.
+                         </p>
+                         <p>
+                              The last microcytic anemia is Iron Deficiency. This is the most common form of anemia world wide due to 
+                              malnutrition. In the develop world, there are genetic disorders that can lead to iron deficiency. The most 
+                              common are related to high cell growth like child development or pregnancy. 
+                         </p>
+                         <p>
+                              Next up is the Macrocytic anemias. These have very large cells as they tend to release very large and 
+                              immature Red Blood cells. They tend to have a MCV over 100 fl. The Macrocytic anemias get dividend into 
+                              Megaloblastic and Non megaloblastic. The Megaloblastic will be accompanied with hypersegmented neutrophils. 
+                              The typical neutrophil will have 3 to 5 lobes in its nucleus. These hypersegmented neutrophils will 7 or
+                              more lobes. The 2 major Megaloblastic Anemias are B12 deficiency and Folate deficiency. These are nutritional 
+                              anemias. These are easily corrected with a high dose of intermuscular B12 or Folate. They are often 
+                              nutritional and can be related to GI diseases. The one thing that stands out about B12 deficiency is it can 
+                              come with some neurocognitive symptoms. These can be in the from of mood changes to memory loss. This is 
+                              the one key factor that separates B12 from Folate deficiency.
+                         </p>
+                         <p>
+                              The top 3 causes of Non Megaloblastic anemia is Liver Disease. Alcoholism and Medications. All of these we 
+                              will not dive into. This brings us back to the normocytic anemias. These get subdivided into the intrinsic 
+                              defects and extrinsic defects of the RBC. Intrinsic are those anemias that stem from a genetic defect of 
+                              the RBC like the spherocytosis and eliptocytosis from the structure protein defects. Then their is Sickle 
+                              Cell anemia which comes from a mutation in the Beta Globin. Sickle Cell anemia will cause the hemoglobin to 
+                              polymerize when in low O2 leading to the sickling of the RBC. 
+                         </p>
+                         <p>
+                              Next would be a G6PD which comes from a missing enzyme which helps covert Oxygen radicals back into water to 
+                              clear them. This leads to the build up of O2 radicals. This is important with beans like Fava Beans. They 
+                              can lead to G6PD attacks. The next will be Paroxysmal Nocturnal Hemoglobinuria (PNH). This is a 
+                              defect in the proteins that get made on the cell surface to defend cells from being attack my the 
+                              complement system. Most of these normalcytic anemias are the destruction anemias where the Red Blood 
+                              Cells get destroyed.
+                         </p>
                          <p class="top-link"><a href="#top">Top</a></p>
 
                     </section>
