--- a/learning/chemotherapy.html
+++ b/learning/chemotherapy.html
@@ -126,13 +126,13 @@
                          </p>
                          <p>
                               Chemotherapies are actually groups of drugs that share many of the similar effects to block cells from 
-                              dividing. A regiment is a set of chemotherapies drugs chosen from these many classes of drugs.
-                              Each chemotherapy regiment, for a specific cancer, might have different drugs from these classes 
-                              in them. Sometimes, even different chemotherapy regiments will be different between patients with 
+                              dividing. A regimen is a set of chemotherapies drugs chosen from these many classes of drugs.
+                              Each chemotherapy regimen, for a specific cancer, might have different drugs from these classes 
+                              in them. Sometimes, even different chemotherapy regimens will be different between patients with 
                               the same type of cancer. This will cover the classes of chemotherapy drugs. The Oncologist will pick
                               drugs from these classes for each patient based on their cancer type. They will pick a group of drugs
                               that they think will best help that specific patient for that specific cancer. Each 
-                              patient is different and might have a differet set of drugs in their regiment. Some regiments of drugs are used 
+                              patient is different and might have a differet set of drugs in their regimen. Some regimens of drugs are used 
                               very commonly in specific cancer types such as CHOP or R-CHOP in Lymphomas. 
                          </p>
                          <p class="top-link"><a href="#top">Top</a></p>
@@ -224,7 +224,7 @@
                          </p>
                          <p>
                               Antimetabolites are a very common type of chemotherapy. They are sometimes used in combination with other 
-                              antimetabolites or even other regiments of chemotherapy drugs. Very rarely is a chemo drug used alone. The 
+                              antimetabolites or even other regimens of chemotherapy drugs. Very rarely is a chemo drug used alone. The 
                               major drawback of these drugs is they still affect all cells that going through the cell cycle. They cause 
                               a ton of collateral damage.
                          </p>
@@ -257,7 +257,7 @@
                               the cell cycle. This brings with it many of the same side effects known with chemotherapy like 
                               suppression of the blood cells, hair loss and GI toxicity. The Taxanes were originally discovered from plant 
                               of the Yew. There are newer fully synthetic forms of taxanes. The 2 most common Taxanes are Docetaxel and 
-                              Paclitaxel. These drugs are widely used in cancer chemotherapy regiments.
+                              Paclitaxel. These drugs are widely used in cancer chemotherapy regimens.
                          </p>
                          <p>
                               The other group of antimitotic drugs are the Vinca Alkyloids like Vincristine. As the taxane allow the formation 
@@ -287,7 +287,7 @@
                               a chemical warfare agent. They work by getting into the DNA can crosslinking the bases together. Mustard agents
                               are complicated chemistry, but they are designed to do massive DNA damage and cause cell death by trigging 
                               the p53 activation. The most important Nitrogen Mustard drug we will deal with every day is Cyclophosphamide. 
-                              This drug is used in the Lyphodepletion regiment of Fludarabine/Cyclophophamide (Flu/Cy). Yes, you might have 
+                              This drug is used in the Lyphodepletion regimen of Fludarabine/Cyclophophamide (Flu/Cy). Yes, you might have 
                               guessed it. Many of the same chemotherapy agents that treat cancer will wipe out the immune cells as they 
                               replicate very quickly. Some of these drugs like Busulfan, Cyclophosphamide and Fludarabine can also be used 
                               to wipe out immune cells or stem cells. Only Cyclophosphamide is a Nitrogen Mustard.
@@ -306,7 +306,7 @@
                               combinations of other chemotherapy type drugs like the antimitotic or antimetabolites.
                          </p>
                          <p>
-                              The clear example of a chemotherapy regiment is CHOP chemotherapy. This uses Cyclophosphamide as a DNA damaging agent with Daunorubicin as 
+                              The clear example of a chemotherapy regimen is CHOP chemotherapy. This uses Cyclophosphamide as a DNA damaging agent with Daunorubicin as 
                               the anthracycline with Vincristine as the antimitotic drug. They are combined with Prednisone as it 
                               helps offset some of the inflammation side effects of the other drugs. these chemotherapy agents are quite toxic. 
                               They target the cell cycle to prevent cells from proliferation. This kills cancer cells, but it has very 
