Updated More Anemia

--- a/learning/anemia.html
+++ b/learning/anemia.html
@@ -359,7 +359,54 @@
                     <section>
                          <h2 class="science-headers" id="hemolysis">Hemolysis</h2>
                          <p> 
-                               
+                              Lysis means the destruction of cells by the rupturing of the cell membrane. The term Hemolysis means the 
+                              rupturing and destruction of Red Blood cells. This is can occur in many anemias. We often call these the 
+                              Hemolytic Anemias or the Destruction Anemias. 
+                         </p>
+                         <p>
+                              Tere are specific signs and symptoms seen with Hemolytic Anemias. First will be the signs and labs for 
+                              anemia. You will see low Hematocrit, low Hemoglobin and low Red Blood Cell count (except Beta 
+                              Thalassemia). The patient will be pale, tired and maybe have shortness of breath.  There will be a high 
+                              Reticulocyte count. If you recall the reticulocyte count is the percentage of all RBCs that are new 
+                              immature RBCs in circulation. If this number is below 1% you will think underproduction anemia. If the 
+                              reticulocyte count is high, then you should consider a destruction anemia. A reticulocyte count of above 
+                              3% is an indicator that a ton of new RBCs are being made to keep up with the loss of RBCs in circulation.
+                         </p>
+                         <p>
+                              The key labs for Hemolysis are elevated LDH, elevated unconjugated bilirubin and low haptoglobin. 
+                              This is the common labs for showing red blood cell destruction. The LDH comes from a metabolism 
+                              enzyme while bilirubin comes from breakdown of Heme. When Red Blood cells are destroyed in the 
+                              circulation they can occur intravascular or extravascular. When you hear the term extravascular, you 
+                              should always think spleen.
+                         </p>
+                         <p>
+                              The RBCs must pass through the spleen where there is spleen macrophages that line the vessels. If 
+                              there is any defect in these Red Blood cells, those spleen macrophages will engulf and break them 
+                              down. This can be RBCs coated with antibodies due to an autoimmune reaction. It could also be RBCs that 
+                              just have shape defects like Spherocytosis. It could also be RBCs with defects inside them like inclusion 
+                              from hemoglobin clumping. What ever the case is, any RBCs that doesn't pass the strict inspection from 
+                              spleen macrophages will be ingested and broken down. The iron will be recycled for new RBCs and the waste 
+                              products like Bilirubin will be processed for waste in the liver.
+                         </p>
+                         <p>
+                              Intravascular hemolysis occurs in the vessels. It has 3 causes with complement, mechanical and 
+                              Microangiopathic Hemolytic Anemia (MAHA). The mechanical form comes from things like a heart pump or 
+                              destruction of Sickle cells in the blockage of a vessel. The MAHA comes from destruction of RBCs by 
+                              things other than the immune system. This is typically things like DIC, TTP, aHUS or HELP syndrome. 
+                              We will go over these later under platelets. The last one is the Autoimmune Hemolytic Anemia (AIHA).
+                              This is driven by antibodies binding to the RBCs and triggering complement proteins which leads to 
+                              Lysis of the cells and destruction in the vessels. These hemolytic causes of anemia can cause enlarged 
+                              spleen due to the extravascular destruction in the spleen or extramedullary RBC production in the spleen.
+                              It can also cause enlarged liver due to the high level of bilirubin processing for waste or 
+                              extramedullary RBC production in the liver.
+                         </p>
+                         <p>
+                              So by now you are thinking that both intravascular and extravascular hemolysis have all the same symptoms. 
+                              How in the world will we know the difference? The answer is hemoglobinuria. This is what they call Tea 
+                              Colored Urine. When RBCs are broken down in the spleen, the macrophages recycle the iron. When intravascular 
+                              hemolysis occurs, all that hemoglobin is dumped into the blood vessels. It gets carried out into the urine 
+                              as waste. Iron is a dark brown colored element. This then turns the urine a brown like color. If you hear tea 
+                              color urine, you should think intravascular hemolysis.
                          </p>
                          <p class="top-link"><a href="#top">Top</a></p>
 
