--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                          <div>
                               <h2 class="section-title">Youtube Featured Video</h2>
                               <div class="videos">
-                                   <iframe src="https://www.youtube.com/embed/NcxccxI8PWQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/MxZyQ_mqQ2E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                          
                               </div>
                          </div>
