--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
+                                   <strong>1/31/2023: </strong> Finished up the Science topics. I plan to work on adding the 
+                                   Genomics companies next.
+                              </p>
+                              <p> 
                                    <strong>1/28/2023: </strong> Working on finishing off the Hematoogy Pages which is 
                                    the last Science topic to finish off. I plan to do more later after I do the rest of 
                                    the topics.
@@ -89,7 +93,7 @@
                          <div>
                               <h2 class="section-title">Youtube Featured Video</h2>
                               <div class="videos">
-                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/MxZyQ_mqQ2E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/_mEix37P65c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                          
                               </div>
                          </div>
@@ -99,7 +103,7 @@
                          <div>
                               <h2 class="section-title">Twitter Featured Thread</h2>
                               <div class="videos">
-                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">1/<a href="https://twitter.com/CRISPRTX?ref_src=twsrc%5Etfw">@CRISPRTX</a> &amp; <a href="https://twitter.com/search?q=%24VRTX&amp;src=ctag&amp;ref_src=twsrc%5Etfw">$VRTX</a> presented an updated clinical data of exa-cel (CTX001) from 75 <a href="https://twitter.com/hashtag/patients?src=hash&amp;ref_src=twsrc%5Etfw">#patients</a>: 44 TDT+31 <a href="https://twitter.com/hashtag/sicklecelldisease?src=hash&amp;ref_src=twsrc%5Etfw">#sicklecelldisease</a> &amp; with a long follow-up. The data demonstrates that exa-cel has the potential to be a one-time functional <a href="https://twitter.com/hashtag/cure?src=hash&amp;ref_src=twsrc%5Etfw">#cure</a>. <a href="https://twitter.com/search?q=%24CRSP&amp;src=ctag&amp;ref_src=twsrc%5Etfw">$CRSP</a> <a href="https://twitter.com/hashtag/ASH22?src=hash&amp;ref_src=twsrc%5Etfw">#ASH22</a> <a href="https://twitter.com/hashtag/GeneEditing?src=hash&amp;ref_src=twsrc%5Etfw">#GeneEditing</a> <a href="https://twitter.com/hashtag/CRISPR?src=hash&amp;ref_src=twsrc%5Etfw">#CRISPR</a> <a href="https://twitter.com/hashtag/BioTech?src=hash&amp;ref_src=twsrc%5Etfw">#BioTech</a> <a href="https://t.co/tpVXrq0K1h">pic.twitter.com/tpVXrq0K1h</a></p>&mdash; Yair Einhorn (@yaireinhorn) <a href="https://twitter.com/yaireinhorn/status/1602307570609389568?ref_src=twsrc%5Etfw">December 12, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">I will prefix this statement with one that I do believe that 90% of investors would do best buying a low cost index fund in a tax free account and contributing every payday. Most investors don&#39;t even need to be active investors.</p>&mdash; Biotech2k (@Biotech2k1) <a href="https://twitter.com/Biotech2k1/status/1620398234350002177?ref_src=twsrc%5Etfw">January 31, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                               </div>
                          </div>
                     </section>
