Added Genomics Companies

--- a/pages/companies.html
+++ b/pages/companies.html
@@ -119,6 +119,21 @@
                </section>  
 
                <section>
+                    <h2 class="section-title">Genomics</h2>
+                    <ol>
+                         <li class="tech-list">
+                              <a href="../pages/invitae.html">Invitae (NVTA)</a>
+                         </li>
+                         <li class="tech-list">
+                              <a href="../pages/pacbio.html">Pacific Biosciences (PACB)</a>
+                         </li>
+                         <li class="tech-list">
+                              <a href="../pages/oxford.html">Oxford Nanopore (ONTTF)</a>
+                         </li>
+                    </ol>
+               </section> 
+
+               <section>
                     <h2 class="section-title">SynBio</h2>
                     <ol>
                          <li class="tech-list">
