--- a/index.html
+++ b/index.html
@@ -73,17 +73,9 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
-                                   <strong>1/31/2023: </strong> Finished up the Science topics. I plan to work on adding the 
-                                   Genomics companies next.
-                              </p>
-                              <p> 
-                                   <strong>1/28/2023: </strong> Working on finishing off the Hematoogy Pages which is 
-                                   the last Science topic to finish off. I plan to do more later after I do the rest of 
-                                   the topics.
-                              </p>
-                              <p>
-                                   <strong>1/27/2023: </strong> Working on building a new front page with more current updates and news so that it has current events
-                                   so people will check back often to see what is new. 
+                                   <strong>1/31/2023: </strong> I finished adding my 3 Genomics companies to the company
+                                   profiles pages. Next up I plan to update the Investing pages to consolidate the pages into 
+                                   a format more like the science pages.
                               </p>
                          </div>
                     </section>
@@ -103,7 +95,7 @@
                          <div>
                               <h2 class="section-title">Twitter Featured Thread</h2>
                               <div class="videos">
-                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">I will prefix this statement with one that I do believe that 90% of investors would do best buying a low cost index fund in a tax free account and contributing every payday. Most investors don&#39;t even need to be active investors.</p>&mdash; Biotech2k (@Biotech2k1) <a href="https://twitter.com/Biotech2k1/status/1620398234350002177?ref_src=twsrc%5Etfw">January 31, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Insightful <a href="https://twitter.com/GENbio?ref_src=twsrc%5Etfw">@GENbio</a> interview featuring <a href="https://twitter.com/a16z?ref_src=twsrc%5Etfw">@a16z</a> general partner and Scribe board member <a href="https://twitter.com/vijaypande?ref_src=twsrc%5Etfw">@vijaypande</a>. We’re proud to have the support of leading biotech and healthcare investors in our <a href="https://twitter.com/hashtag/CRISPRbyDesign?src=hash&amp;ref_src=twsrc%5Etfw">#CRISPRbyDesign</a> approach to engineering <a href="https://twitter.com/hashtag/CRISPR?src=hash&amp;ref_src=twsrc%5Etfw">#CRISPR</a> enzymes and therapies. <a href="https://t.co/Wiccj4bo05">https://t.co/Wiccj4bo05</a></p>&mdash; Scribe Therapeutics (@scribetx) <a href="https://twitter.com/scribetx/status/1620479404563374093?ref_src=twsrc%5Etfw">January 31, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                               </div>
                          </div>
                     </section>
