Updated Investing Pages

--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
+                                   <strong>1/31/2023: </strong> I consolidated the Investing pages so are the same as the science 
+                                   pages format. I plan to expand the topics later, but this will work for now. Next up will be to
+                                   build out the Clinical Data section.
+                              </p>
+                              <p> 
                                    <strong>1/31/2023: </strong> I finished adding my 3 Genomics companies to the company
                                    profiles pages. Next up I plan to update the Investing pages to consolidate the pages into 
                                    a format more like the science pages.
