Finished Clinical Data page

--- a/pages/clinicaldata.html
+++ b/pages/clinicaldata.html
@@ -57,26 +57,107 @@
           <!--Here Starts the Main Body-->
 
           <main>
+
+               <div class="container">
               
-               <section class="container">
-                    <h2 class="section-title">
-                         Clinical Data
-                    </h2>
+                    <section class="container">
+                         <h2 class="section-title">
+                              Clinical Data
+                         </h2>
 
-                    <p class="large-text">
-                         This section is about breaking down the clinical data. I think the hardest part
-                         of being a biotechnology investor is knowing how to read the clinical data, and how to figure out 
-                         what it all means. There are a lot of technical endpoints that can confuse investors. Sometimes
-                         companies fail to design a good clinical trial. This happens too often. Many of these young companies
-                         are not experts in designing or running clinical trials. This section will be some teaching about 
-                         the clinical trials and the data to look for, but a lot of it will be going through actual clinical 
-                         data readouts by companies and breaking it down. I am not an expert in reading clinical data, but I 
-                         have been doing it for many years. Most of the takes I give on clinical data will be just my point
-                         of view. Other investors might not agree with my point of view on any data readouts. That is OK. There
-                         is a lot to consider when looking at data to include data from competitors.
-                    </p>
-               </section>
+                         <p class="large-text">
+                              This section is about breaking down the clinical data. I think the hardest part
+                              of being a biotechnology investor is knowing how to read the clinical data, and how to figure out 
+                              what it all means. There are a lot of technical endpoints that can confuse investors. Sometimes
+                              companies fail to design a good clinical trial. This happens too often. Many of these young companies
+                              are not experts in designing or running clinical trials. This section will be some teaching about 
+                              the clinical trials and the data to look for, but a lot of it will be going through actual clinical 
+                              data readouts by companies and breaking it down. I am not an expert in reading clinical data, but I 
+                              have been doing it for many years. Most of the takes I give on clinical data will be just my point
+                              of view. Other investors might not agree with my point of view on any data readouts. That is OK. There
+                              is a lot to consider when looking at data to include data from competitors.
+                         </p>
+                    </section>
 
+                    <ul>
+                         <li class="investor-link">
+                              <a href="#phases">Phases of Clinical Trials</a>
+                         </li>
+                    </ul>
+
+                    <section>
+                         <h2 class="section-title" id="phases">Phases of Clinical Trials</h2>
+                         <p>     
+                              First will be years of preclinical work. This is all about the chemistry, formulation, toxicology and 
+                              manufacturing of the drug. They will have to do extensive testing and submit all that data to the FDA 
+                              for the Investigational New Drug (IND) application. The first studies will be done in human cells. This 
+                              will be to establish a proof of concept of how the biology works in the cells. Then they will move to 
+                              animal models. This is often mice and Non Human Primates (NHP). Since the systems in animals are not 
+                              always exactly the same as humans, not every drug will be tested in both mice and monkeys. Some concepts 
+                              like immunology might not be applicable to one of these animals. Once all the animal models are done, 
+                              the company will submit all its data for a IND with the FDA. The FDA will review the data and determine 
+                              if human trials can proceed. Whenever the FDA finds and issue in any stage of clinical development, they will often issue a hold or 
+                              partial hold on that program along with a Complete Response Letter (CRL). This letter will request more 
+                              information on topics of concern. 
+                         </p>
+                         <p>
+                              Then the drug will proceed into phase 1 clinical trials. The sole purpose of this stage of development is 
+                              to prove the safety and pharmacokinetics (PK) of the drug. The PK goes by the acronym ADME for 
+                              Absorption, Distribution, Metabolism and Excretion. Phase 1 is all about learning how the drug works in 
+                              the human body and any side effects it might cause. In non life threatening diseases, this is done in 
+                              healthy volunteers. In diseases like cancer, they will test in patients with the disease. The first 2 
+                              studies are the SAD (Single Ascending Dose) and MAD (Multiple Ascending Dose) studies. This is where 
+                              they test multiple doses across groups of patients to see how each dose responds. You might hear of the 
+                              phase 1a and phase1 b studies. The phase 1a is all about the dose escalation and safety. The phase 1b is about finding 
+                              the right dose to move to phase 2. This might include expanding the patients tested at some doses that 
+                              seem to have the best responses.
+                         </p>
+                         <p>
+                              Then the drug moves to phase 2. This is all about testing the efficacy of the drug in patients with the 
+                              disease. Sometimes you will hear about phase 2a and 2b. The phase 2a might be more dose testing in 
+                              patients with the disease to see which ones respond best. Then they can expand to phase 2b where they 
+                              focus on the dose where the best efficacy was seen. There can be many phase 2 trials for the same drug. 
+                              Once safety has been established in phase 1, they can test the drug in many different diseases with 
+                              phase 2 trials. This is where they will expand the trials into all indications where they think a good 
+                              signal of response was seen. Some phase 2 programs will start with a basket trial. This is where they 
+                              test the drug with patients from different diseases to see which diseases show a good response. Then 
+                              they expand those indications into a complete phase 2 study to test the efficacy in that specific 
+                              disease. The key to good phase 2 data is understanding exactly what that study drug contributes to 
+                              the efficacy toward a disease. Often companies will design confusing trials with multiple drugs that 
+                              mask the efficacy of any single drug.
+                         </p>
+                         <p>
+                              After a successful efficacy study in phase 2, the drug will proceed to phase 3. The phase 3 is designed 
+                              to test this drug vs the current standard of care. The phase 3 is the hardest as it has to prove the 
+                              drug actually improves outcomes for patients vs what they might be taking now. If the standard of care is
+                              Chemo + PD1, then the study might be Study Drug + PD1 + Chemo vs PD1 + Chemo alone. The phase 3 has to 
+                              prove the drug can improve the standard of care. This might only be for a small population of patients 
+                              with a disease. Sometimes a drug can improve outcomes for patients with a specific form of the disease or 
+                              a specific mutation of a cancer. If the phase 3 is successful, then company will file for a New Drug 
+                              Application (NDA). 
+                         </p>
+                         <p>
+                              The FDA will take 60 days to look over the package and then accept or decline it.
+                              A normal review takes 10 months. If the drug gets and expedited review, then it only takes 6 months. 
+                              Some statuses issued by the FDA can speed up the process for review to the 6 months time point like 
+                              fast track designation. Once accepted, they will issue a PDUFA (Prescription Drug User Fee Act) date 
+                              by which they will issue a ruling. Sometimes, a drug will need what they call a Post Marketing Study 
+                              or a phase 4 study. This is usually a long term follow up study to ensure long term safety or efficacy. 
+                              Its not very often you will see these studies, but its important to know they exist if you see one.
+                         </p>
+                         <p>
+                              The main keys to seeing a good trial design is that it has only 1 variable between the group with 
+                              the study drug and the control group. Some studies do not use a control group. This usually 
+                              happens in very bad disease where it would be unethical to use a control group. That is usually 
+                              when they compare data to historical data they know from the history of the disease. A blinded 
+                              study means the doctors and patients don't get to know who is on study drug and who is on placebo.
+                              Open label means both the patients and doctors get to know who is on drug. These can be used to 
+                              explore an indication. Some studies will undergo a Blinded Independent Central Review (BICR) by 
+                              a panel of doctors who don't get to see anything but the data.
+                         </p>
+                         <p class="top-link"><a href="#top">Top</a></p>
+
+               </div>
 
           </main>
 
