--- a/investing/investing.html
+++ b/investing/investing.html
@@ -59,7 +59,7 @@
                <div class="investing-container">
 
                     <section>
-                         <h2 class="section-title">
+                         <h2 class="investing-headers">
                               Investing Strategies and Updates
                          </h2>
 
@@ -77,7 +77,7 @@
                          </p>
                     </section>
 
-                    <h2 class="section-title">Investing</h2>
+                    <h2 class="investing-headers">Investing</h2>
                     
                     <ul>
                          <li class="investor-link">
